# personaplex

./: .dockerignore  .gitignore  README.md  run.sh
moshi/: pyproject.toml  requirements.txt
moshi/moshi/: fp8_quantize.py  offline.py  server.py
moshi/moshi/models/: lm.py
moshi/moshi/utils/: connection.py  logger.py
