[project]
name = "moshi-personaplex"
requires-python = ">= 3.10"
description = "Personaplex finetune of moshi to enable role and voice control."
dependencies = [
    "numpy >= 1.26, < 2.2",
    "safetensors >= 0.4.0, < 0.5",
    "huggingface-hub >= 0.24, < 0.25",
    "einops == 0.7",
    "sentencepiece == 0.2",
    "sounddevice == 0.5",
    "sphn >= 0.1.4, < 0.2",
    "torch==2.10.0",
    "torch >= 2.9, < 2.11",
    "torchaudio >= 2.9, < 2.11",
    "torchvision >= 0.24, < 0.26",
    "aiohttp >= 3.10.5, < 3.11",
    "accelerate >= 1.12, < 1.13",
    "python-dotenv==1.1.1",
]
authors = [{name="Rajarshi Roy", email="rajarshir@nvidia.com"}]
maintainers = [{name="Rajarshi Roy", email="rajarshir@nvidia.com"}]
license = {text = "MIT"}
dynamic = ["version"]
readme = "README.md"

[project.scripts]
moshi-server = "moshi.server:main"
moshi-offline = "moshi.offline:main"

[tool.setuptools.dynamic]
version = {attr = "moshi.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
